--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -10,7 +10,6 @@
       <th>Release date</th>
       <th>Band</th>
       <th>Artist</th>
-      <th>References</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -23,7 +22,7 @@
         <td><%= album.release_date %></td>
         <td><%= album.band_id %></td>
         <td><%= album.artist %></td>
-        <td><%= album.references %></td>
+        <%# <td><%= album.references %></td> %>
         <td><%= link_to 'Show', album %></td>
         <td><%= link_to 'Edit', edit_album_path(album) %></td>
         <td><%= link_to 'Destroy', album, method: :delete, data: { confirm: 'Are you sure?' } %></td>
