Initial pages for artists and bands

--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -32,13 +32,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :artist %>
-    <%= form.text_field :artist %>
-  </div>
-
-  <div class="field">
-    <%= form.label :references %>
-    <%= form.text_field :references %>
+    <%= form.label :artist_id %>
+    <%= form.text_field :artist_id %>
   </div>
 
   <div class="actions">
