--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -22,12 +22,7 @@
 
 <p>
   <strong>Artist:</strong>
-  <%= @album.artist %>
-</p>
-
-<p>
-  <strong>References:</strong>
-  <%= @album.references %>
+  <%= @album.artist_id %>
 </p>
 
 <%= link_to 'Edit', edit_album_path(@album) %> |
