--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -21,8 +21,7 @@
         <td><%= album.label %></td>
         <td><%= album.release_date %></td>
         <td><%= album.band_id %></td>
-        <td><%= album.artist %></td>
-        <%# <td><%= album.references %></td> %>
+        <td><%= album.artist_id %></td>
         <td><%= link_to 'Show', album %></td>
         <td><%= link_to 'Edit', edit_album_path(album) %></td>
         <td><%= link_to 'Destroy', album, method: :delete, data: { confirm: 'Are you sure?' } %></td>
