--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,24 +1,10 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @artist.name %>
-</p>
-
-<p>
-  <strong>Area:</strong>
-  <%= @artist.area %>
-</p>
-
-<p>
-  <strong>Birth:</strong>
-  <%= @artist.birth %>
-</p>
-
-<p>
-  <strong>Death:</strong>
-  <%= @artist.death %>
-</p>
-
-<%= link_to 'Edit', edit_artist_path(@artist) %> |
-<%= link_to 'Back', artists_path %>
+<ul>
+  <% @artist.albums.each do |album| %>
+    <li><%= album.name %></li>
+    <ul>
+      <% album.songs.each do |song|%>
+        <li><%= song.title %></li>
+      <% end%>
+    </ul>
+  <% end %>
+</ul>
