--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -1,24 +1,10 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @band.name %>
-</p>
-
-<p>
-  <strong>Area:</strong>
-  <%= @band.area %>
-</p>
-
-<p>
-  <strong>Founded:</strong>
-  <%= @band.founded %>
-</p>
-
-<p>
-  <strong>Disbanded:</strong>
-  <%= @band.disbanded %>
-</p>
-
-<%= link_to 'Edit', edit_band_path(@band) %> |
-<%= link_to 'Back', bands_path %>
+<ul>
+  <% @band.albums.each do |album| %>
+    <li><%= album.name %></li>
+    <ul>
+      <% album.songs.each do |song|%>
+        <li><%= song.title %></li>
+      <% end%>
+    </ul>
+  <% end %>
+</ul>
