--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -1,35 +1,12 @@
-<p id="notice"><%= notice %></p>
+<% if @albums.empty? %>
+<p> There are no albums in the database. </p>
+<% else %>
+  <h3>The albums that I really like are:</h3>
+  <ul>
+    <% @albums.each do |album|%>
 
-<h1>Albums</h1>
+      <li><%= link_to album.name, album %></li>
+    <%end %>
+  </ul>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Label</th>
-      <th>Release date</th>
-      <th>Band</th>
-      <th>Artist</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @albums.each do |album| %>
-      <tr>
-        <td><%= album.name %></td>
-        <td><%= album.label %></td>
-        <td><%= album.release_date %></td>
-        <td><%= album.band_id %></td>
-        <td><%= album.artist_id %></td>
-        <td><%= link_to 'Show', album %></td>
-        <td><%= link_to 'Edit', edit_album_path(album) %></td>
-        <td><%= link_to 'Destroy', album, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Album', new_album_path %>
+<% end %>
