--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,29 +1,8 @@
-<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @album.name %>
-</p>
-
-<p>
-  <strong>Label:</strong>
-  <%= @album.label %>
-</p>
-
-<p>
-  <strong>Release date:</strong>
-  <%= @album.release_date %>
-</p>
-
-<p>
-  <strong>Band:</strong>
-  <%= @album.band_id %>
-</p>
-
-<p>
-  <strong>Artist:</strong>
-  <%= @album.artist_id %>
-</p>
-
-<%= link_to 'Edit', edit_album_path(@album) %> |
-<%= link_to 'Back', albums_path %>
+<h1><%= @album.name %></h1>
+<p>Album by <%= @album.artist.name %> released in <%= @album.release_date %> through <%= @album.label %> </p>
+<ul>
+  <% @album.songs.each do |song|%>
+    <li><%= song.title %></li>
+  <% end%>
+</ul>
