--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,33 +1,14 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Songs</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Length</th>
-      <th>Position</th>
-      <th>Album</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @songs.each do |song| %>
-      <tr>
-        <td><%= song.title %></td>
-        <td><%= song.length %></td>
-        <td><%= song.position %></td>
-        <td><%= song.album_id %></td>
-        <td><%= link_to 'Show', song %></td>
-        <td><%= link_to 'Edit', edit_song_path(song) %></td>
-        <td><%= link_to 'Destroy', song, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Song', new_song_path %>
+<% if @songs.empty? %>
+<p> There are no albums in the database. </p>
+<% else %>
+  <h3>The songs that I really like are:</h3>
+  <ul>
+    <% @songs.each do |song|%>
+      <li>
+        <%= link_to song.title, song %>
+        (<%= song.album.name %> by
+        <%= !song.album.artist.nil? ? song.album.artist.name : song.album.band.name  %>)
+      </li>
+    <%end %>
+  </ul>
+<% end %>
