--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,6 +1,8 @@
 
+<img src=<%=@album.image%>>
 <h1><%= @album.name %></h1>
 <p>Album by <%= @album.artist.name %> released in <%= @album.release_date %> through <%= @album.label %> </p>
+<p><%=@album.info%></p>
 <ul>
   <% @album.songs.each do |song|%>
     <li><%= song.title %></li>
