--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,27 @@
     <title>IntroProjDenzhel</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+  </head>
   <body>
+    <header>
+      <h1>Denzhel's Current Music Favorites</h1>
+        <p>
+          <%= link_to 'Home', root_path %> |
+          <%= link_to 'Artists', artists_path %> |
+          <%= link_to 'Bands', bands_path %> |
+          <%= link_to 'Albums', albums_path %> |
+        </p>
+    </header>
+      <%= render partial: 'songs/search'%>
     <%= yield %>
+    <footer>
+      Copyright Dricstor 2020.
+    </footer>
   </body>
 </html>
