Member model for many to many relationships

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
               <%= link_to 'Artists', artists_path %> |
               <%= link_to 'Bands', bands_path %> |
               <%= link_to 'Albums', albums_path %> |
+              <%= link_to 'About', about_path %>
             </p>
         </header>
           <%= render partial: 'songs/search'%>
