--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -6,7 +6,7 @@
 
   <div class="column">
     <h1 class="title is-1"><%= @album.name %></h1>
-    <p class="subtitle is-3">Album by <%= @album.band.name %> released in <%= @album.release_date.strftime("%B %d, %Y") %> through <%= @album.label %> </p>
+    <p class="subtitle is-3">Album by <%= !@album.artist.nil? ? (link_to @album.artist.name, @album.artist) : (link_to @album.band.name, @album.band)%> released in <%= @album.release_date.strftime("%B %d, %Y") %> through <%= @album.label %> </p>
     <p class="subtitle is-4"><%=@album.info%></p>
   </div>
 </div>
