--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,16 +1,22 @@
 <% if @artists.empty? %>
 <p> There are no artists in the database. </p>
 <% else %>
-  <h3 class="title is-1">The artists that I really like are:</h3>
-  <ul>
-    <% @artists.each do |artist|%>
-      <li>
-        <p class="subtitle is-1">
-          <%= link_to artist.name, artist %>
-        </p>
-      </li>
-    <%end %>
-  </ul>
+
+  <div class="box">
+    <h3 class="title is-1">The artists that I really like are:</h3>
+    <ul>
+      <% @artists.each do |artist|%>
+        <li class="box">
+          <p class="subtitle is-1">
+            <%= link_to artist.name, artist %>
+          </p>
+          <p class="subtitle is-3">
+            <%= artist.info%>
+          </p>
+        </li>
+      <%end %>
+    </ul>
+  </div>
 
 <% end %>
 
