--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,3 +1,4 @@
+<div class="box">
 <h1 class="title is-1"><%=@artist.name%></h1>
 <div class="box">
   <h4 class="title is-2">About</h4>
@@ -12,7 +13,7 @@
       <%@artist.bands.each do |band| %>
       <li class="column is-half">
         <p class="title is-4">
-          <%= band.name%>
+          <%= link_to band.name, band%>
         </p>
         <p class="subtitle is-5">
           <%= band.info%>
@@ -33,7 +34,7 @@
           <p>
             <%= link_to album.name, album %>
           </p>
-          <img src=<%= album.image%> />
+          <%= link_to image_tag(album.image, :alt => album.name), album %>
       </li>
 
       <li class="column is-one-third">
@@ -45,6 +46,7 @@
       </li>
     <% end %>
   </ul>
+</div>
 </div>
 
 
