Fixed css for songs section

--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,4 +1,5 @@
 
+<div class="box">
 <div class="columns">
   <div class="column is-one-quarter">
     <img src=<%=@album.image%>>
@@ -23,3 +24,4 @@
 
   <% end%>
 </ul>
+</div>
