--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,3 +1,4 @@
+<div class="box">
 <div class="columns">
   <div class="column is-one-quarter">
     <img src=<%= @song.album.image %>>
@@ -7,6 +8,7 @@
     <p class="subtitle is-3"><%= @song.title %> is a song by <%= !@song.album.artist.nil? ? (link_to @song.album.artist.name, @song.album.artist) : (link_to @song.album.band.name, @song.album.band)%> from the album <%= link_to @song.album.name, @song.album %></p>
     <p class="subtitle is-4"><%=@song.info%></p>
   </div>
+</div>
 </div>
 
 
