--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,7 +1,7 @@
 <div class="box">
 <div class="columns">
   <div class="column is-one-quarter">
-    <img src=<%= @song.album.image %>>
+    <%= link_to image_tag(song.album.image, :alt => song.album.name), song.album %>
   </div>
   <div class="column">
     <h1 class="title is-1"><%= @song.title %></h1>
